testdata/valid/minimal.pact
// Minimal component definition
component User {
	id: string
}
