testdata/invalid/semantic/undefined_type.pact
// Reference to undefined type
component User {
	id: string
	profile: UndefinedProfileType
}
